@@ -479,6 +479,7 @@ void CLunaLua::bindAll()
             .property("speedX", &LuaProxy::Player::speedX, &LuaProxy::Player::setSpeedX)
             .property("speedY", &LuaProxy::Player::speedY, &LuaProxy::Player::setSpeedY)
             .property("powerup", &LuaProxy::Player::powerup, &LuaProxy::Player::setPowerup)
+            .property("character", &LuaProxy::Player::character, &LuaProxy::Player::setCharacter)
             .property("reservePowerup", &LuaProxy::Player::reservePowerup, &LuaProxy::Player::setReservePowerup)
             .property("holdingNPC", &LuaProxy::Player::holdingNPC)
             .property("upKeyPressing", &LuaProxy::Player::upKeyPressing, &LuaProxy::Player::setUpKeyPressing)
@@ -491,7 +492,10 @@ void CLunaLua::bindAll()
             .property("altRunKeyPressing", &LuaProxy::Player::altRunKeyPressing, &LuaProxy::Player::setAltRunKeyPressing)
             .property("dropItemKeyPressing", &LuaProxy::Player::dropItemKeyPressing, &LuaProxy::Player::setDropItemKeyPressing)
             .property("pauseKeyPressing", &LuaProxy::Player::pauseKeyPressing, &LuaProxy::Player::setPauseKeyPressing)
-            .property("isValid", &LuaProxy::Player::isValid)
+            .def("getCurrentPlayerSetting", &LuaProxy::Player::getCurrentPlayerSetting)
+            .def("getCurrentSpriteIndex", &LuaProxy::Player::getCurrentSpriteIndex, pure_out_value(_2) + pure_out_value(_3))
+            .def("setCurrentSpriteIndex", &LuaProxy::Player::setCurrentSpriteIndex)
+			.property("isValid", &LuaProxy::Player::isValid)
             /*Generated by code*/
 #ifdef _MSC_VER //Generated by code
 #pragma region
