@@ -1,7 +1,6 @@
 #include "MemoryScanner.h"
 
-#include <WinSock2.h>
-#include <WS2tcpip.h>
+
 
 #include <iomanip>
 #include <sstream>
