@@ -2,6 +2,7 @@
 
 v0.7.2 BETA:
   * Extended Level class and World class (Overworld)
+  * Extneded Player class
 
 v0.7.1.1 BETA:
   * Added comparing operator for some LunaLua classes.
